# drosophila-tracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  tracks.csv
helpers/: file-name-parser.py
include/: bbox.hpp  color_picker.hpp  geometry_utils.hpp  pairings.hpp  tracker.hpp  tracker_single_frame_info.hpp  video-preprocessor.hpp  video_tracker.hpp
src/: color_picker.cpp  main.cpp  tracker_single_frame_info.cpp  video-preprocessor.cpp  video_tracker.cpp
